Correció de rutes d'arxius a l'index.html

--- a/web_CV/public/index.html
+++ b/web_CV/public/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Pol Sances Guirao" />
     <meta name="description" content="Sóc un estudiant de 17 anys que resideix a Tordera amb inquietuds de voler prosperar a la vida. " />
-    <link rel="stylesheet" href="/css/main.min.f991915c82c9b46c22fbfb172788788ca9226c4f2279bb746293c1bd0852f5bd.css" />
+    <link rel="stylesheet" href="css/main.min.f991915c82c9b46c22fbfb172788788ca9226c4f2279bb746293c1bd0852f5bd.css" />
     <link rel="alternate" type="application/rss+xml" href="http://prova.org/index.xml" title="Pol Sances Guirao">
     
 
@@ -26,7 +26,7 @@
   </head>
   <body>
     <header class="app-header">
-      <a href="http://prova.org/"><img class="app-header-avatar" src="/foto-piera.jpg" alt="Pol Sances Guirao" /></a>
+      <a href="http://prova.org/"><img class="app-header-avatar" src="foto-piera.jpg" alt="Pol Sances Guirao" /></a>
       <span class="app-header-title">Pol Sances Guirao</span>
       <p>Sóc un estudiant de 17 anys que resideix a Tordera amb inquietuds de voler prosperar a la vida. </p>
       <div class="app-header-social">
