--- a/web_CV/public/index.html
+++ b/web_CV/public/index.html
@@ -14,6 +14,8 @@
 
     
     <meta name="twitter:card" content="summary"/><meta name="twitter:title" content="Pol Sances Guirao"/>
+<meta name=mail:title content="polsances@gmail.com" />
+<meta name=telf:title content="633389349" />    
 <meta name="twitter:description" content="Sóc un estudiant de 17 anys que resideix a Tordera amb inquietuds de voler prosperar a la vida. "/>
 
     <meta property="og:title" content="Pol Sances Guirao" />
